<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cLayout">

        <TextView
                android:text="@string/dialog_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:id="@+id/textView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2" android:layout_marginBottom="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:id="@+id/linearLayout2"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tvError">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:background="@drawable/rectangle_background"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:maxLines="4"
                    android:ems="7"
                    android:id="@+id/etWidth" android:layout_weight="0.45"/>
            <TextView
                    android:text="@string/X"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/tvX"
                    android:layout_weight="0.1"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:gravity="center"
                    android:maxLength="4"
                    android:ems="7"
                    android:background="@drawable/rectangle_background"
                    android:id="@+id/etHeight" android:layout_weight="0.45"/>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvError" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linearLayout3" android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvError" android:layout_marginTop="8dp">
            <Button
                    android:text="@string/cancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:id="@+id/btnCancel"
                    android:layout_weight="1"/>
            <Button
                    android:text="@string/ok"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content" android:id="@+id/btnOk" android:layout_weight="1"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>