<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.MainActivity" android:orientation="vertical">
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/rectangle_background"
                android:id="@+id/spnrFirst"
                android:layout_weight="0.05"
                android:textSize="24sp"
                android:layout_margin="8dp"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:layout_margin="8dp"
                android:background="@drawable/rectangle_background"
                android:padding="8dp">
            <ru.limeek.floodfillapp.presentation.BitmapCustomView
                    android:id="@+id/cstmView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </RelativeLayout>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/rectangle_background"
                android:id="@+id/spnrSecond"
                android:layout_weight="0.05"
                android:textSize="24sp"
                android:layout_margin="8dp"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:layout_margin="8dp"
                android:background="@drawable/rectangle_background"
                android:padding="8dp">
            <ru.limeek.floodfillapp.presentation.BitmapCustomView
                    android:id="@+id/cstmView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </RelativeLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="0.1" android:layout_marginBottom="8dp">
            <Button
                    android:text="@string/btn_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSize"
                    android:textSize="12sp"
                    android:layout_weight="0.3" android:layout_gravity="center"/>
            <Button
                    android:text="@string/btn_generate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGenerate"
                    android:textSize="12sp"
                    android:layout_weight="0.3"
                    android:gravity="center" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSpeed"
                    android:layout_weight="0.05"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            <SeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sbSpeed"
                    android:layout_weight="0.4" android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</layout>